--- a/app.json
+++ b/app.json
@@ -18,6 +18,11 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-3940256099942544~3347511713" 
+      }
     }
   }
 }
